<resources>
    <string name="app_name">AuctionApp</string>
    <string name="image_product">Zdjecie Produktu</string>
    <string name="product_name">Nazwa Produktu</string>
    <string name="product_price">Cena</string>
    <string name="product_time">Czas</string>
    <string name="auction">Licytuj</string>
    <string name="navigation_draver_close">Close Navigation Draver</string>
    <string name="navigation_draver_open">Open Navigation Draver</string>

    <string-array name="testt">
        <item>test</item>
        <item>testtttt</item>
    </string-array>

</resources>
