<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/product_image"
        android:layout_centerVertical="true"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/image_product"/>

    <TextView
        android:id="@+id/textViewProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/product_image"
        android:text="@string/product_name"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/product_image" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/textViewProduct"
        android:layout_toRightOf="@+id/textViewProduct"
        android:text="@string/product_price"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewProduct"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="-2dp"
        android:layout_toEndOf="@+id/product_image"
        android:layout_toRightOf="@+id/product_image"
        android:text="@string/product_time"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textViewTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewProduct"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-2dp"
        android:layout_toEndOf="@+id/product_image"
        android:layout_toRightOf="@+id/product_image"
        android:text="@string/product_time"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonAuction"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="280dp"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_round"
        android:text="@string/auction" />

    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="340dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="340dp"
        android:background="@drawable/button_round"
        android:text="History"
        android:onClick="openHistory"/>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/button_round" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/button_round" />

</RelativeLayout>